--- a/index.html
+++ b/index.html
@@ -1,2 +1,24 @@
 test
 <div style="color:red">我是王家</div>
+<button class="cool-btn">超酷按鈕</button>
+
+<style>
+.cool-btn {
+  background: linear-gradient(90deg, #ff512f 0%, #dd2476 100%);
+  color: #fff;
+  border: none;
+  border-radius: 30px;
+  padding: 15px 40px;
+  font-size: 1.2em;
+  font-weight: bold;
+  box-shadow: 0 4px 15px rgba(221,36,118,0.2);
+  cursor: pointer;
+  transition: transform 0.2s, box-shadow 0.2s;
+  outline: none;
+}
+.cool-btn:hover {
+  transform: scale(1.08) rotate(-2deg);
+  box-shadow: 0 8px 30px rgba(221,36,118,0.3);
+  background: linear-gradient(90deg, #dd2476 0%, #ff512f 100%);
+}
+</style>
