--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 test
 <div style="color:red">我是王家</div>
-<button class="cool-btn">超酷按鈕</button>
+<button class="cool-btn">各系統設備</button>
 
 <style>
 .cool-btn {
